// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`typegen declaration for a params-block prompt matches snapshot 1`] = `
"// Generated by @markdown-di/bun typegen from compile-brief.md — do not edit.

export interface CompileBriefParams {
  transcript: string
  productName: string
  attempt?: number
}

declare function render(params: CompileBriefParams): string
export default render

export declare const frontmatter: Record<string, unknown>
export declare const source: string
"
`;

exports[`typegen declaration for a $dynamic prompt matches snapshot 1`] = `
"// Generated by @markdown-di/bun typegen from dynamic-style.md — do not edit.

export interface DynamicStyleParams {
  transcript: unknown
}

declare function render(params: DynamicStyleParams): string
export default render

export declare const frontmatter: Record<string, unknown>
export declare const source: string
"
`;

exports[`typegen single-file mode single-file output for multiple templates matches snapshot 1`] = `
"// Generated by @markdown-di/bun typegen — do not edit.

declare module '*compile-brief.md' {
  export interface CompileBriefParams {
    transcript: string
    productName: string
    attempt?: number
  }

  const render: (params: CompileBriefParams) => string
  export default render

  export const frontmatter: Record<string, unknown>
  export const source: string
}

declare module '*dynamic-style.md' {
  export interface DynamicStyleParams {
    transcript: unknown
  }

  const render: (params: DynamicStyleParams) => string
  export default render

  export const frontmatter: Record<string, unknown>
  export const source: string
}

declare module '*static.md' {
  const render: () => string
  export default render

  export const frontmatter: Record<string, unknown>
  export const source: string
}
"
`;

exports[`typegen data and collections a data file declares its frontmatter as a literal type 1`] = `
"// Generated by @markdown-di/bun typegen from approved.gate.md — do not edit.

export interface MarkdownRow {
  readonly label: string
  readonly text: string
  readonly line: number
}

export interface MarkdownBlock {
  readonly category: string | null
  readonly paragraphs: readonly string[]
  readonly rows: readonly MarkdownRow[]
  readonly content: string
}

export interface MarkdownSection extends MarkdownBlock {
  readonly heading: string
  readonly line: number
}

export interface MarkdownSections extends MarkdownBlock {
  readonly title: string | null
  readonly sections: readonly MarkdownSection[]
}

declare const data: {
  readonly frontmatter: {
    readonly id: "g-approved"
    readonly kind: "gate"
    readonly stage: "review"
    readonly name: "approved"
    readonly roles: readonly ["lead", "designer"]
    readonly mandatory: true
    readonly weight: 3
    readonly routes: readonly [
      {
        readonly id: "ship"
        readonly text: "ship it"
        readonly effects: readonly ["ticket-to-done"]
      },
      {
        readonly id: "rework"
        readonly text: "rework ↺"
        readonly backTo: "intake"
      },
    ]
    readonly effects: readonly [
      {
        readonly name: "ticket-to-done"
        readonly change: "ticket: Review → Done"
      },
    ]
  }
  readonly body: string
  readonly sections: MarkdownSections
}
export default data

export declare const frontmatter: typeof data.frontmatter
export declare const body: string
export declare const sections: MarkdownSections
"
`;

exports[`typegen data and collections single-file mode declares the section types once, as an ambient module 1`] = `
"// Generated by @markdown-di/bun typegen — do not edit.

declare module 'markdown-di:types' {
  export interface MarkdownRow {
    readonly label: string
    readonly text: string
    readonly line: number
  }

  export interface MarkdownBlock {
    readonly category: string | null
    readonly paragraphs: readonly string[]
    readonly rows: readonly MarkdownRow[]
    readonly content: string
  }

  export interface MarkdownSection extends MarkdownBlock {
    readonly heading: string
    readonly line: number
  }

  export interface MarkdownSections extends MarkdownBlock {
    readonly title: string | null
    readonly sections: readonly MarkdownSection[]
  }
}

declare module '*approved.gate.md' {
  import type { MarkdownSections } from 'markdown-di:types'

  const data: {
    readonly frontmatter: {
      readonly id: "g-approved"
      readonly kind: "gate"
      readonly stage: "review"
      readonly name: "approved"
      readonly roles: readonly ["lead", "designer"]
      readonly mandatory: true
      readonly weight: 3
      readonly routes: readonly [
        {
          readonly id: "ship"
          readonly text: "ship it"
          readonly effects: readonly ["ticket-to-done"]
        },
        {
          readonly id: "rework"
          readonly text: "rework ↺"
          readonly backTo: "intake"
        },
      ]
      readonly effects: readonly [
        {
          readonly name: "ticket-to-done"
          readonly change: "ticket: Review → Done"
        },
      ]
    }
    readonly body: string
    readonly sections: MarkdownSections
  }
  export default data

  export const frontmatter: typeof data.frontmatter
  export const body: string
  export const sections: MarkdownSections
}

declare module '*process.md' {
  import type { MarkdownSections } from 'markdown-di:types'

  const entries: readonly [
    {
      readonly path: "01-intake/intake.node.md"
      readonly frontmatter: {
        readonly id: "n-intake"
        readonly kind: "node"
        readonly stage: "intake"
        readonly name: "intake"
      }
      readonly body: string
      readonly sections: MarkdownSections
    },
    {
      readonly path: "02-review/approved.gate.md"
      readonly frontmatter: {
        readonly id: "g-approved"
        readonly kind: "gate"
        readonly stage: "review"
        readonly name: "approved"
        readonly roles: readonly ["lead", "designer"]
        readonly mandatory: true
        readonly weight: 3
        readonly routes: readonly [
          {
            readonly id: "ship"
            readonly text: "ship it"
            readonly effects: readonly ["ticket-to-done"]
          },
          {
            readonly id: "rework"
            readonly text: "rework ↺"
            readonly backTo: "intake"
          },
        ]
        readonly effects: readonly [
          {
            readonly name: "ticket-to-done"
            readonly change: "ticket: Review → Done"
          },
        ]
      }
      readonly body: string
      readonly sections: MarkdownSections
    },
  ]
  export default entries
}

declare module '*compile-brief.md' {
  export interface CompileBriefParams {
    transcript: string
    productName: string
    attempt?: number
  }

  const render: (params: CompileBriefParams) => string
  export default render

  export const frontmatter: Record<string, unknown>
  export const source: string
}
"
`;
